Fix broken COM interface IIDs and v-table entry order